--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -1,213 +1,93 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<!-- Start of  Zendesk Widget script -->
-<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8bd1b71a-ff84-437d-a53b-3af6d91d14a8"> </script>
-<!-- End of  Zendesk Widget script -->
+<script>
+(function(){
+  const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
+  const MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference";
+  const CHECK_STATUS  = "https://italomelo.com/server/check_status.php";
+  const HOME_APPROVED = "https://dietapronta.online/approved";
+  const HOME_FAILURE  = "https://dietapronta.online/?status=failure#quiz";
 
-  
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Pagamento • Dieta Pronta Online</title>
-  <meta name="description" content="Finalize o pagamento para receber seu plano de dieta completo no WhatsApp.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://sdk.mercadopago.com/js/v2"></script>
-  <style>
-    :root { --brand: #22c55e; }
-    body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif; }
-    .container { max-width: 980px; }
-    .shadow-soft { box-shadow: 0 10px 25px rgba(2, 6, 23, 0.08); }
-  </style>
-</head>
-<body class="bg-slate-50 text-slate-900">
-  <header class="bg-white border-b border-slate-200">
-    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
-      <div class="flex items-center gap-3">
-        <div class="h-9 w-9 rounded-2xl bg-[var(--brand)]/10 flex items-center justify-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[var(--brand)]" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6l4 2"/>
-          </svg>
-        </div>
-        <a href="/" class="font-extrabold tracking-tight hover:underline">Dieta Pronta Online</a>
-      </div>
-      <a href="/" class="text-sm text-slate-600 hover:underline">Voltar ao site</a>
-    </div>
-  </header>
+  function $(id){ return document.getElementById(id); }
+  function getParam(key){ return new URLSearchParams(location.search).get(key) || ""; }
 
-  <main class="container mx-auto px-4 py-10">
-    <div class="grid lg:grid-cols-3 gap-8 items-start">
-      <section class="lg:col-span-2">
-        <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
-          <h1 class="text-2xl md:text-3xl font-extrabold">Finalize o pagamento</h1>
-          <p class="text-slate-600 mt-2">Valor: <strong>R$ 9,90</strong>. Aceitamos Pix, cartão e boleto.</p>
+  // 🔹 Recupera dados do lead e da dieta
+  const ref = getParam("ref") || localStorage.getItem("mp_external_ref") || "";
+  const customer_name  = localStorage.getItem("lead_nome")  || getParam("nome")  || "";
+  const customer_email = localStorage.getItem("lead_email") || getParam("email") || "";
+  const customer_whats = localStorage.getItem("lead_whats") || getParam("whats") || "";
 
-          <div id="statusBanner" class="hidden mt-4 mb-2 rounded-xl px-4 py-3 text-sm border"></div>
+  // 🔹 Recupera tipo de dieta e biotipo
+  const diet_title = getParam("diet_title") || localStorage.getItem("quiz_result_title") || localStorage.getItem("diet_title") || "Plano de Dieta Completo";
+  const body_type  = getParam("body_type")  || localStorage.getItem("quiz_body_type") || localStorage.getItem("body_type") || "";
+  const imc_value  = getParam("imc_value")  || localStorage.getItem("quiz_imc_value")  || "";
+  const imc_label  = getParam("imc_label")  || localStorage.getItem("quiz_imc_label")  || "";
 
-          <div id="mp-checkout" class="mt-4"></div>
-          <div id="fallbackLink" class="mt-3"></div>
+  // Exibe nome e tipo no resumo
+  if ($("dietLabel")) $("dietLabel").textContent = diet_title + (body_type ? " " + body_type : "");
 
-          <div class="mt-6 p-4 rounded-xl bg-amber-50 border border-amber-200 text-amber-900 text-sm">
-            <strong>Como funciona:</strong> após pagar por <em>Pix</em>, a confirmação costuma ocorrer em poucos minutos. Assim que aprovado, você será redirecionado automaticamente.
-          </div>
-        </div>
-      </section>
+  // 🔹 Inicializa SDK do Mercado Pago
+  const mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
 
-      <aside>
-        <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
-          <h2 class="text-lg font-bold">Resumo do pedido</h2>
-          <ul class="mt-3 text-sm text-slate-700 space-y-2">
-            <li class="flex items-center justify-between">
-              <span>Plano de Dieta Completo</span>
-              <strong>R$ 9,90</strong>
-            </li>
-            <li class="flex items-center justify-between border-t pt-2">
-              <span>Total</span>
-              <strong>R$ 9,90</strong>
-            </li>
-          </ul>
-          <div class="mt-6 text-xs text-slate-500">
-            Pagamento processado com Mercado Pago.  
-            Em caso de dúvidas, volte para a <a href="/" class="underline">página principal</a>.
-          </div>
-        </div>
-      </aside>
-    </div>
-  </main>
-
-  <footer class="py-8 text-center text-xs text-slate-500">
-    © <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.
-  </footer>
-
-  <script>
-  (function(){
-    const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    const MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference";
-    const CHECK_STATUS  = "https://italomelo.com/server/check_status.php";
-    const HOME_APPROVED = "https://dietapronta.online/approved";
-    const HOME_FAILURE  = "https://dietapronta.online/?status=failure#quiz";
-
-    function $(id){ return document.getElementById(id); }
-
-    function showBanner(texto, classes){
-      const banner = $("statusBanner");
-      banner.textContent = texto;
-      banner.className = "mt-4 mb-2 rounded-xl px-4 py-3 text-sm border " + classes;
-      banner.classList.remove("hidden");
-    }
-
-    function getParam(key){ return new URLSearchParams(location.search).get(key) || ""; }
-
-    // Recupera o ref (igual ao banco)
-    let ref = getParam("ref") || "";
-    if (!ref) {
-      try { ref = localStorage.getItem("mp_external_ref") || ""; } catch(e){}
-    }
-
-    // Dados do cliente
-    let customer_name  = localStorage.getItem("lead_nome")  || getParam("nome")  || "";
-    let customer_email = localStorage.getItem("lead_email") || getParam("email") || "";
-    let customer_whats = localStorage.getItem("lead_whats") || getParam("whats") || "";
-
-    const mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
-
-    // 🔹 Renderiza e ABRE AUTOMATICAMENTE o checkout
-    function renderCheckout(prefId, initPoint){
-      mp.checkout({ preference: { id: prefId }, render: { container: "#mp-checkout", label: "Pagar R$ 9,90" } });
-
-      if(initPoint){
-        const a=document.createElement("a");
-        a.href=initPoint;
-        a.target="_blank";
-        a.rel="noopener";
-        a.className="text-sm underline block mt-3";
-        a.textContent="⚠️ Caso o pagamento não abra automaticamente, clique aqui.";
-        $("fallbackLink").appendChild(a);
-
-        // 🚀 Abre automaticamente o checkout
-        setTimeout(() => {
-          try {
-            const payBtn = document.querySelector("#mp-checkout button, #mp-checkout iframe");
-            if (payBtn) {
-              if (payBtn.click) payBtn.click();
-              else window.location.href = initPoint;
-              console.log("[auto-open] Checkout aberto automaticamente");
-            } else {
-              window.location.href = initPoint;
-            }
-          } catch (e) {
-            console.error("[auto-open] erro ao abrir automaticamente:", e);
-            window.location.href = initPoint;
-          }
-        }, 1000);
-      }
-    }
-
-    // 🔹 Cria a preferência no backend
-    fetch(MP_ENDPOINT, {
-      method: "POST",
-      headers: { "Content-Type":"application/json" },
-      body: JSON.stringify({
-        valor: 9.90,
-        titulo: "Plano de Dieta Completo",
-        external_reference: ref,
-        customer_name,
-        customer_email,
-        customer_whatsapp: customer_whats
-      })
+  // 🔹 Cria preferência no backend
+  fetch(MP_ENDPOINT, {
+    method: "POST",
+    headers: { "Content-Type":"application/json" },
+    body: JSON.stringify({
+      valor: 9.90,
+      titulo: "Plano de Dieta Completo",
+      external_reference: ref,
+      customer_name,
+      customer_email,
+      customer_whatsapp: customer_whats,
+      diet_title,     // ✅ agora envia dieta
+      body_type,      // ✅ e biotipo
+      imc_value,
+      imc_label
     })
-    .then(r => r.json())
-    .then(data => {
-      renderCheckout(data.id, data.init_point);
-      showBanner("Aguardando pagamento... Assim que o PIX for aprovado, você será redirecionado automaticamente.", "bg-amber-50 border-amber-300 text-amber-800");
-      startPolling();
-    })
-    .catch(err => {
-      console.error("[mp-preference]", err);
-      showBanner("Erro ao iniciar o pagamento. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
-    });
+  })
+  .then(r => r.json())
+  .then(data => {
+    renderCheckout(data.id, data.init_point);
+    showBanner("Aguardando pagamento... Assim que o PIX for aprovado, você será redirecionado automaticamente.", "bg-amber-50 border-amber-300 text-amber-800");
+    startPolling();
+  })
+  .catch(err => {
+    console.error("[mp-preference]", err);
+    showBanner("Erro ao iniciar o pagamento. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
+  });
 
-    let pollTimer=null;
-    function startPolling(){ checkNow(); pollTimer=setInterval(checkNow, 5000); }
+  function renderCheckout(prefId, initPoint){
+    mp.checkout({ preference: { id: prefId }, render: { container: "#mp-checkout", label: "Pagar R$ 9,90" } });
+    setTimeout(() => { window.location.href = initPoint; }, 1200);
+  }
 
-    // 🔹 Verificação do status e redirecionamento
-    async function checkNow(){
-      try {
-        const res = await fetch(CHECK_STATUS + "?ref=" + encodeURIComponent(ref) + "&t=" + Date.now());
-        const data = await res.json();
+  function showBanner(texto, classes){
+    const banner = $("statusBanner");
+    banner.textContent = texto;
+    banner.className = "mt-4 mb-2 rounded-xl px-4 py-3 text-sm border " + classes;
+    banner.classList.remove("hidden");
+  }
 
-        if (!data || !data.found) return;
+  let pollTimer=null;
+  function startPolling(){ checkNow(); pollTimer=setInterval(checkNow, 5000); }
 
-        const status = (data.status || "").toLowerCase();
-        console.log("[status-check]", status, "ref=", ref);
-
-        if (status === "approved") {
-          if (pollTimer) clearInterval(pollTimer);
-          showBanner("✅ Pagamento aprovado! Redirecionando...", "bg-emerald-50 border-emerald-300 text-emerald-800");
-          setTimeout(() => {
-            window.location.href = HOME_APPROVED + "?ref=" + encodeURIComponent(ref);
-          }, 2000);
-        } else if (["rejected", "cancelled", "canceled"].includes(status)) {
-          if (pollTimer) clearInterval(pollTimer);
-          showBanner("Pagamento não aprovado. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
-          setTimeout(() => {
-            window.location.href = HOME_FAILURE;
-          }, 2500);
-        } else if (status === "pending") {
-          showBanner("⏳ Aguardando confirmação do PIX...", "bg-amber-50 border-amber-300 text-amber-800");
-        }
-      } catch (e) {
-        console.error("[status-check] erro", e);
+  async function checkNow(){
+    try {
+      const res = await fetch(CHECK_STATUS + "?ref=" + encodeURIComponent(ref) + "&t=" + Date.now());
+      const data = await res.json();
+      if (!data || !data.found) return;
+      const status = (data.status || "").toLowerCase();
+      if (status === "approved") {
+        if (pollTimer) clearInterval(pollTimer);
+        showBanner("✅ Pagamento aprovado! Redirecionando...", "bg-emerald-50 border-emerald-300 text-emerald-800");
+        setTimeout(()=>window.location.href=HOME_APPROVED+"?ref="+encodeURIComponent(ref),2000);
+      } else if (["rejected","cancelled","canceled"].includes(status)) {
+        if (pollTimer) clearInterval(pollTimer);
+        showBanner("Pagamento não aprovado. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
+        setTimeout(()=>window.location.href=HOME_FAILURE,2500);
       }
-    }
+    } catch(e){ console.error("[status-check] erro", e); }
+  }
 
-    // Atualiza quando o usuário volta para a aba
-    window.onfocus = () => checkNow();
-
-    $("year").textContent = new Date().getFullYear();
-  })();
-  </script>
-</body>
-</html>
+  $("year").textContent = new Date().getFullYear();
+})();
+</script>
